--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="preload" href="/src/assets/fonts/OpenSans.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/src/assets/fonts/OpenSans_ExtraBold.woff2" as="font" type="font/woff2" crossorigin />
+  <meta name="google-site-verification" content="bPjQ6J_WwpA3cESwnguVpmK5SAI_7UOQ0qou6AvRYSw" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>portfolio-with-react</title>
 </head>
